Добавлен JTW токен